<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bible</string>
    <string name="pref_nightmode_title">Night Mode</string>
    <string name="pref_fontsize_title">Font size</string>
    <string name="pref_fontsize_default">medium</string>
    <string name="pref_fontsize_dialog_title">Select font size:</string>
    <string name="pref_rateme_title">Rate me on Google Play</string>
    <string name="text_download">Download more translations</string>
    <string name="text_downloading">Downloading, please wait.</string>
    <string name="text_copied">Texts copied to clipboard.</string>
    <string name="text_delete">Delete</string>
    <string name="text_delete_confirm">Are you sure to delete this translation?</string>
    <string name="text_deleted">Deleted.</string>
    <string name="text_deleting">Deleting, please wait.</string>
    <string name="text_fail_to_fetch_translations_list">Can not fetch the translations list, please try again!</string>
    <string name="text_fail_to_fetch_translation">Can not fetch the translation, please try again!</string>
    <string name="text_initializing">Initializing, please wait.</string>
    <string name="text_no_available_translation">No available translations available for download.</string>
    <string name="text_no_network">No network connection available, please check before try again!</string>
    <string name="text_no_translation">No translation installed, please download from the Internet.</string>
    <string name="text_searching">Searching&#8230;</string>
    <string name="text_search_result">\u0020result(s) found.</string>
    <string name="text_size">Size:\u0020</string>
    <string name="text_share_with">Share with&#8230;</string>
    <string name="text_settings">Settings</string>
    <string name="title_download_translation">Available translations</string>
    <string name="title_select_translation">Select a translation</string>

    <string-array name="array_fontsize_name">
        <item>Very Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Very Large</item>
    </string-array>

</resources>
