<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_nightmode"
        android:title="@string/pref_nightmode_title" />

    <ListPreference
        android:defaultValue="@string/pref_fontsize_default"
        android:dialogTitle="@string/pref_fontsize_dialog_title"
        android:entries="@array/array_fontsize_name"
        android:entryValues="@array/array_fontsize_value"
        android:key="pref_fontsize"
        android:title="@string/pref_fontsize_title" />

    <Preference android:title="@string/pref_rateme_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="market://details?id=net.zionsoft.obadiah" />
    </Preference>

</PreferenceScreen>
